context menu to access dashboard from main blog

--- a/gatsby-mdx-zenlify-editor/src/styles/global.css
+++ b/gatsby-mdx-zenlify-editor/src/styles/global.css
@@ -21,7 +21,7 @@ h2 {
     margin-bottom: 1rem;
     font-size: 1.80rem;
     font-weight: 700;
-    font-family: Helvetica neue,helvetica,sans-serif;
+    font-family: Lato,Helvetica neue,helvetica,sans-serif;
     line-height: 2.35rem;
     letter-spacing: -0.05rem;
 }
